tests/data/php/shouldfail/ScalarParamWithoutParamAnnotation.php
<?php
/**
 * @package Foo
 */ 
class Bar {
    
    /**
     * Some method
     *
     */
    public function foo( $string ) {}
    
}
